--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="ifmasala.js"></script>
     <script src="boolean.js"></script>
     <script src="1000tamasala1qism.js"></script>
+    <script src="formasala.js"></script>
+    <script src="functiontasks.js"></script>
     <p>Whats up</p>
     <hr>    
 </body>
